# livesplit-one-desktop

./: .gitignore  Cargo.toml  README.md  config.toml  config.yaml
.github/workflows/: before_deploy.sh  build.sh  rust.yml
src/: config.rs  main.rs  quad.vert  quad_textured.frag  renderer.rs  stream_markers.rs
src/renderer/: mod.rs  quad.vert  quad_colored.frag  quad_textured.frag
twitch-stream-markers/: Cargo.toml
twitch-stream-markers/src/: lib.rs
