[package]
name = "livesplit-one"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
backtrace = "0.3.13"
bytemuck = "1.4.1"
chrono = { version = "0.4.0", features = ["serde", "clock"], default-features = false }
fern = "0.6.0"
futures-executor = "0.3.7"
image = "0.23.4"
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["software-rendering", "networking"] }
log = { version = "0.4.6", features = ["serde"] }
raw-window-handle = "0.3.3"
serde = { version = "1.0.85", features = ["derive"] }
serde_yaml = "0.8.8"
tokio = "0.2.4"
twitch-stream-markers = { path = "twitch-stream-markers" }
winit = "0.20.0"
pixels = "0.2.0"

[patch.crates-io]
winit = { git = "https://github.com/CryZe/winit", branch = "winit-no-raw-input" }

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.dev.build-override]
opt-level = 0

[profile.release]
lto = true
panic = "abort"

[profile.release.build-override]
opt-level = 0
