[package]
name = "livesplit-one"
version = "0.0.1"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
backtrace = "0.3.13"
bytemuck = "1.4.1"
chrono = { version = "0.4.0", features = ["serde", "clock"], default-features = false }
fern = "0.6.0"
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["software-rendering", "font-loading", "networking"] }
log = { version = "0.4.6", features = ["serde"] }
minifb = "0.19.1"
serde = { version = "1.0.85", features = ["derive"] }
serde_yaml = "0.8.8"
tokio = { version = "1.6.1", features = ["rt-multi-thread"] }
twitch-stream-markers = { path = "twitch-stream-markers" }

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.dev.build-override]
opt-level = 0

[profile.release]
lto = true
panic = "abort"
# debug = true

[profile.release.build-override]
opt-level = 0
