[package]
name = "twitch-stream-markers"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12.24"
hyper-rustls = "0.16.0"
serde_json = "1.0.38"
serde = { version = "1.0.88", features = ["derive"] }
futures = "0.1.25"
webbrowser = "0.4.0"
url = "1.7.2"
tokio = "0.1.15"
