[package]
name = "twitch-stream-markers"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.0"
hyper-tls = "0.4.0"
serde_json = "1.0.44"
serde = { version = "1.0.88", features = ["derive"] }
# futures = "0.3.1"
# webbrowser = "0.5.2"
# url = "2.1.0"
# tokio = "0.2.4"
anyhow = "1.0.25"
bytes = "0.5.2"
