[package]
name = "twitch-stream-markers"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.0"
hyper-rustls = "0.19.0"
serde_json = "1.0.44"
serde = { version = "1.0.88", features = ["derive"] }
anyhow = "1.0.25"
bytes = "0.5.2"
